# django-graphql

./: .env  .gitignore  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
quiz/: admin.py  models.py  mutations.py  schema.py  types.py
quiz/migrations/: 0001_initial.py
