[tool.poetry]
name = "django-graphql"
version = "0.1.0"
description = ""
authors = ["Alexander <asashek@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
graphene-django = "^2.15.0"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
